<resources>
    <string name="app_name">The Meal</string>
    <string name="item_home">Home</string>
    <string name="item_ingredient">Ingredient</string>
    <string name="item_favorite">Favorite</string>
    <string name="hint_search_view">Search meal…</string>
    <string name="meal_image">meal image</string>
    <string name="image_right_arrow">image right arrow</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="hint_search_ingredient">Search ingredient…</string>
    <string name="hint_search_favorite">Search favorite meal…</string>
    <string name="hint_search">Search…</string>
    <string name="title_remove">Remove</string>
    <string name="msg_remove">You want remove \"%s\" ?</string>
    <string name="no_result">No Result</string>
    <string name="description">Description: </string>
    <string name="ingredient">Ingredient:</string>
    <string name="instructions">Instructions:</string>
    <string name="tags">Tags: %s</string>
    <string name="area">Area: %s</string>
    <string name="read_more">read more</string>
    <string name="hide">hide</string>
    <string name="notification_not_found">Not found ingredient</string>
    <string name="title_disconnect_network">No Internet</string>
    <string name="msg_disconnect_network">Check your internet connection</string>
</resources>
