<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp_5"
        android:padding="@dimen/dp_10"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/dp_10">

            <ImageView
                android:id="@+id/image_meal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                app:layout_constraintDimensionRatio="w, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_meal" />

            <TextView
                android:id="@+id/text_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/tags"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name" />


            <TextView
                android:id="@+id/text_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/area"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_tag" />

            <TextView
                android:id="@+id/text_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/ingredient"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_area" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_ingredient"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintDimensionRatio="2:1"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginHorizontal="@dimen/dp_15"
                app:layout_constraintHeight_max="wrap"
                app:layout_constraintTop_toBottomOf="@id/text_ingredient"
                tools:itemCount="20" />

            <TextView
                android:id="@+id/text_instruction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                android:text="@string/instructions"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_ingredient" />

            <com.example.themeal.custom.ReadMoreTextView
                android:id="@+id/text_instruction_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_10"
                android:textColor="@color/color_black"
                android:textSize="@dimen/sp_16"
                app:show_line="3"
                app:hide_text="@string/hide"
                app:show_text="@string/read_more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_instruction" />

            <ImageView
                android:id="@+id/image_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/text_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/dp_10"
                android:src="@drawable/ic_favorite" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/video_instruction"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_0"
                android:layout_marginHorizontal="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_10"
                app:layout_constraintDimensionRatio="w, 1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_instruction_content"
                app:autoPlay="false" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
